feat(tests): integrate Playwright for end-to-end testing and add example tests chore: update .gitignore to include Playwright test results docs: enhance README with testing strategies and commands

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,9 @@ dist-ssr
 pp4*.code-workspace
 
 coverage/
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
